Update to Gradle 8.5
Signed-off-by: Andriy Redko <andriy.redko@aiven.io>